# chatbox-android

./: .gitignore  Makefile  README-CN.md  README.md  package.json  pnpm-lock.yaml
src/: App.tsx  SettingWindow.tsx  aiProviders.json  api.ts  client.ts  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/android_launch/: convert_icon.sh
src-tauri/src/: lib.rs  main.rs
src/i18n/locales/en/: translation.json
src/i18n/locales/jp/: translation.json
src/i18n/locales/zh-Hans/: translation.json
src/i18n/locales/zh-Hant/: translation.json
src/theme/: ThemeSwitcher.tsx
